# yyang-pplus.github.io

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Gemfile  README.md  _config.yml  about.md  disclosures.md  index.markdown  index.md  pds.md  ppts.md  style.md
.github/: CODEOWNERS
.github/workflows/: cmake.yml
_includes/: second-system-effect-navigation.html
_includes/src/: CMakeLists.txt
_includes/src/2018-12-29-LDAP-global-vs-handle-options/: CMakeLists.txt  defines.hpp  dependencies.sh  ldap-debug-enums.hpp  ldap-option-declaration.hpp  ldap-utils.hpp  set-debug-level-example.hpp  set-global-debug-level.cpp  set-handle-debug-level.cpp  set_global_debug_level.cpp
_includes/src/2019-03-04-lifetime-of-temporary/: CMakeLists.txt  a-temporary.cpp  a_temporary.cpp  base-wrapper.hpp  base.hpp  base_wrapper.hpp  const-lvalue-reference.cpp  const_lvalue_reference.cpp  derived.cpp  derived.hpp  exception-1.cpp  exception-2.cpp  exception-3.cpp  exception-4.cpp  exception_1.cpp  exception_2.cpp  exception_3.cpp  exception_4.cpp  rvalue-reference.cpp  rvalue_reference.cpp  special-case.cpp  special_case.cpp  trace.hpp
_includes/src/2019-07-26-ctest-that-never-ends/: CMakeLists.txt  buggy-setup-db.py  buggy_setup_db.py  cleanup-test-db.py  cleanup_test_db.py  dependencies.sh  ls-pipe.sh  ls_pipe.sh  setup-test-db.py  setup_test_db.py
_includes/src/2020-05-16-a-concise-cpp-file-access-reference/: CMakeLists.txt  fprintf-issue.cpp  fprintf-issue.hpp  fstream-declaration.hpp
_includes/src/2020-06-10-user-defined-output-stream-buffers/: CMakeLists.txt  filebuf-xsputn.hpp  hex-out-stream-buffer.cpp  hex-out-stream-buffer.hpp  hex-out-stream-nobuf-improved-fd.cpp  hex-out-stream-nobuf-improved-path.cpp  hex-out-stream-nobuf-improved.hpp  hex-out-stream-nobuf.cpp  hex-out-stream-nobuf.hpp  hex-out-stream.cpp  hex-out-stream.hpp  hex_out_stream.cpp  hex_out_stream.hpp  hex_out_stream_buffer.cpp  hex_out_stream_buffer.hpp  hex_out_stream_nobuf.cpp  hex_out_stream_nobuf.hpp  hex_out_stream_nobuf_improved.hpp  hex_out_stream_nobuf_improved_fd.cpp  hex_out_stream_nobuf_improved_path.cpp  str-utils.hpp  str_utils.hpp  test-utils.hpp  test_utils.hpp
_includes/src/2020-06-15-user-defined-input-stream-buffers/: CMakeLists.txt  hex-in-stream-buffer.cpp  hex-in-stream-buffer.hpp  hex-in-stream-nobuf.cpp  hex-in-stream-nobuf.hpp  hex-in-stream-single-buf.cpp  hex-in-stream-single-buf.hpp  hex_in_stream_buffer.cpp  hex_in_stream_buffer.hpp  hex_in_stream_nobuf.cpp  hex_in_stream_nobuf.hpp  hex_in_stream_single_buf.cpp  hex_in_stream_single_buf.hpp  test-utils.hpp  test_utils.hpp
_includes/src/2021-01-20-pds-compiler-warnings/: CMakeLists.txt  conditional-unused-but-set-parameter-fixed.hpp  implicit-fallthrough-fixed.hpp  pds-compiler-warnings.cpp  switch.hpp  unused-function-fixed.hpp  unused-parameter-fixed.hpp  unused-parameter.hpp  unused-result.hpp  unused-variable-fixed.hpp  unused-variable.hpp
_includes/src/2021-02-10-pds-assertions/: CMakeLists.txt  assert-before-crash.cpp  assert-before-crash.hpp  assert-false.hpp  assert-false.test.cpp  assert-on-concept.hpp  assertion-as-comment.hpp  assertion-as-precondition.hpp  expects-as-precondition.hpp  if-as-precondition.hpp  pds-assertions-main.cpp  show-assertion.cpp
_includes/src/2021-03-11-pds-logging-rate-limiter/: CMakeLists.txt  chrono-utils.hpp  leaky-bucket-logger.hpp  leaky-bucket-main.cpp  logpp.hpp  rate.hpp  sliding-log-logger.hpp  sliding-log-main.cpp  sliding-window-counter-logger.hpp  sliding-window-counter-main.cpp  test-utils.hpp  token-bucket-logger.hpp  token-bucket-main.cpp  token-bucket.hpp  token.hpp
_includes/src/2021-04-08-pds-stack-backtrace/: CMakeLists.txt  dereference-null-pointer.cpp
_includes/src/2023-06-18-possible-ways-to-end-a-cpp-program/: CMakeLists.txt  catch-all-main.cpp  catch-current-exception-on-abort.cpp  catch-current-exception-on-terminate.cpp  catch-current-exception-on-terminate.hpp
_layouts/: default.html
_posts/: 2018-05-09-the-second-system-effect-explained.md  2018-05-10-the-second-system-effect-misunderstood.md  2018-05-11-the-second-system-effect-challenged.md  2018-12-20-introduction-to-ldapwhoami-and-ldap-authtication-mechanisms.md  2018-12-21-manage-and-use-ldap-servers-without-rootdn.md  2018-12-29-set-openldap-debug-level-the-correct-way.md  2019-03-04-the-lifetime-of-a-temporary-and-its-extension-explained.md  2019-07-26-a-ctest-that-never-ends.md  2020-05-16-a-concise-cpp-file-access-reference.md  2020-06-10-user-defined-output-stream-buffers.md  2020-06-15-user-defined-input-stream-buffers.md  2021-01-20-pds-compiler-warnings.md  2021-02-10-pds-assertions.md  2021-03-11-pds-logging-rate-limiter.md  2021-04-08-pds-stack-backtrace.md  2022-01-22-ppts-VM-oversubscription.md  2022-05-13-welcome-to-jekyll.markdown  2022-05-13-welcome-to-jekyll.md  2023-06-18-possible-ways-to-end-a-cpp-program.md
cmake/: utils.cmake
drafts/: 2021-04-09-pds-programmatically-backtrace.md  2023-07-06-signal-safe-patterns-in-cpp.md
drafts/2021-04-09-pds-programmatically-backtrace/: CMakeLists.txt  backtrace-and-symbols.cpp  backtrace-and-symbols.hpp  boost-stacktrace-on-assert.cpp  boost-stacktrace-on-assert.hpp  boost-stacktrace-on-terminate.cpp  dependencies.sh  dummy-functions.hpp
scripts/: CMakeLists.txt  bootstrap.sh  dependencies.sh  format_tests.sh  setup.sh
src/2018-12-29-LDAP-global-vs-handle-options/: CMakeLists.txt  defines.h  ldap_connection.h  set_handle_debug_level.cpp  test_global_option.cpp  test_handle_option.cpp
src/2019-03-04-lifetime-of-temporary/: CMakeLists.txt  a_temporary.cpp  base_wrapper.hpp  const_lvalue_reference.cpp  derived.cpp  exception_1.cpp  exception_2.cpp  exception_3.cpp  exception_4.cpp  special_case.cpp  trace.hpp
